fix overflow issues on grid

--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -83,6 +83,7 @@ p{
 	animation-name: gridExpand;
 	transition-timing-function: ease-out;
 	user-select: none;
+	overflow: hidden;
 }
 
 //first link of the nav
